refactor model using builder and make migrations